--- a/Yodle-iOS-Training/Yodle-iOS-Training/Base.lproj/Main.storyboard
+++ b/Yodle-iOS-Training/Yodle-iOS-Training/Base.lproj/Main.storyboard
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8191" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="yuC-bp-BQs">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="yuC-bp-BQs">
     <dependencies>
-        <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8154"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
@@ -123,7 +122,7 @@
                                         <rect key="frame" x="8" y="320" width="124" height="42"/>
                                         <subviews>
                                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Vx7-MQ-bVm">
-                                                <rect key="frame" x="0.0" y="0.0" width="25" height="42"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="44" height="42"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits" autocorrectionType="no"/>
                                             </textField>
@@ -144,6 +143,7 @@
                                         </subviews>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <constraints>
+                                            <constraint firstItem="m83-sp-WjV" firstAttribute="leading" secondItem="Vx7-MQ-bVm" secondAttribute="trailing" constant="10" id="4hL-oj-bTy"/>
                                             <constraint firstAttribute="bottom" secondItem="Vx7-MQ-bVm" secondAttribute="bottom" id="Mb4-Ze-zC0"/>
                                             <constraint firstItem="Vx7-MQ-bVm" firstAttribute="top" secondItem="bWd-uu-ANb" secondAttribute="top" id="gBP-PC-JWv"/>
                                             <constraint firstAttribute="bottom" secondItem="m83-sp-WjV" secondAttribute="bottom" id="hHl-Ws-rLB"/>
@@ -156,7 +156,7 @@
                                         <rect key="frame" x="8" y="320" width="124" height="42"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iWm-J2-t31">
-                                                <rect key="frame" x="0.0" y="0.0" width="39" height="42"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="44" height="42"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="42" id="iuu-Iw-dnf"/>
                                                 </constraints>
@@ -186,6 +186,7 @@
                                             <constraint firstItem="iWm-J2-t31" firstAttribute="leading" secondItem="LLs-ug-IjB" secondAttribute="leading" id="Np5-CM-cwb"/>
                                             <constraint firstAttribute="trailing" secondItem="0kA-t4-HTa" secondAttribute="trailing" id="ZbB-IP-j2H"/>
                                             <constraint firstAttribute="bottom" secondItem="iWm-J2-t31" secondAttribute="bottom" id="aRz-XK-mkT"/>
+                                            <constraint firstItem="0kA-t4-HTa" firstAttribute="leading" secondItem="iWm-J2-t31" secondAttribute="trailing" constant="10" id="bVb-86-hxl"/>
                                             <constraint firstItem="iWm-J2-t31" firstAttribute="top" secondItem="LLs-ug-IjB" secondAttribute="top" id="dru-EL-NqP"/>
                                             <constraint firstItem="0kA-t4-HTa" firstAttribute="top" secondItem="LLs-ug-IjB" secondAttribute="top" id="wod-Wc-VW7"/>
                                         </constraints>
